@@ -1,65 +1,54 @@
-# JavaFX JAR Template
+# Rush Hour Puzzle Solver
 
-Template project to create a JavaFX project with dependencies and build it as an executable jar-file. This project contains TilesFX to illustrate the use of extra dependencies.
+**Rush Hour Puzzle Solver** adalah sebuah program pencarian solusi untuk sebuah permasalahan Rush Hour. Pencarian dilakukan dengan menggunakan algoritma pathfinding Greedy Best-first Search, Uniform Cost Search, dan A* untuk mencari solusi. Program ini dibuat untuk memenuhi Tugas Kecil 3 mata kuliah Strategi Algoritma (IF2211).
 
-![Screenshot of the running application](screenshot/running-app.png)
+## Requirement dan Instalasi
+Program ini berjalan dengan bahasa Java 21 dengan dependency JavaFX 21.0.3, dan dibangun dengan struktur Maven. Aplikasi sudah dikompilasi dan executable dapat digunakan selama Java dapat berjalan di perangkat dengan versi yang sesuai.
 
-## Install Java SDK with JavaFX 
+- [Java 21](https://www.oracle.com/id/java/technologies/downloads/#java21)
 
-* This template requires Java 21 or newer.
-* Use for instance Azul Zulu with JavaFX included.
-* Check installation instructions on the Azul Documentation website:
-  * [Windows](https://docs.azul.com/core/install/windows)
-  * [macOS](https://docs.azul.com/core/install/macos)
-  * [Linux](https://docs.azul.com/core/install/debian)
-* Or use [SDKMAN](https://sdkman.io/) on Linux or macOS to easily install a JDK or switch to an other one:
-```bash
-# Install SDKMAN 
-$ curl -s "https://get.sdkman.io" | bash
-$ source "$HOME/.sdkman/bin/sdkman-init.sh"
+Untuk melakukan kompilasi, Maven atau library JavaFX harus diinstal di perangkat terlebih dahulu.
 
-# Install SDK and answer Y to set as default
-$ sdk install java 21.0.4.fx-zulu
+- [Maven Apache](https://maven.apache.org/install.html)
+- [JavaFX 21.0.3](https://gluonhq.com/products/javafx/)
+
+## Cara Mengkompilasi Program
+Build dapat dilakukan dengan dua cara terpisah. Dapat menggunakan Maven atau menggunakan Javac.
+### Maven
+Jalankan skrip berikut di directory yang mengandung pom.xml untuk menginstal dependensi yang dibutuhkan dan menghasilkan file executable di bin.
+  ```
+  mvn clean install
+  ```
+
+Setelah proses build selesai, file executable .jar akan tersedia di bin.
+### Javac
+Jalankan skrip berikut di directory yang mengandung src untuk melakukan kompilasi. Pastikan javafx-sdk sudah dapat diakses di dalam perangkat dengan version yang sesuai
+
+```
+javac --module-path "PATH\TO\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml -d bin src/main/java/tucil/rhsolver/app/*.java
 ```
 
-## Install Maven
-
-* Follow the instructions on [the website of the Apache Maven Project](https://maven.apache.org/install.html).
-* Or use [SDKMAN](https://sdkman.io/) on Linux or macOS:
-```bash
-$ sdk install maven
-```
-
-## Check Java and Maven version
+## Cara Menjalankan dan Menggunakan Program
+Setelah build selesai, jalankan executable melalui terminal/command prompt dari direktori utama dengan format:
 
 ```bash
-$ java -version
-openjdk version "21.0.4" 2024-07-16 LTS
-OpenJDK Runtime Environment Zulu21.36+17-CA (build 21.0.4+7-LTS)
-OpenJDK 64-Bit Server VM Zulu21.36+17-CA (build 21.0.4+7-LTS, mixed mode, sharing)
-
-$ mvn -version
-Apache Maven 3.9.6 (bc0240f3c744dd6b6ec2920b3cd08dcc295161ae)
-Maven home: /Users/frank/.sdkman/candidates/maven/current
-Java version: 21.0.4, vendor: Azul Systems, Inc., runtime: /Users/frank/.sdkman/candidates/java/21.0.4.fx-zulu/zulu-21.jdk/Contents/Home
-Default locale: en_US, platform encoding: UTF-8
-OS name: "mac os x", version: "14.6.1", arch: "aarch64", family: "mac"
+java -jar .\bin\rush-hour-puzzle-solver-jar-with-dependencies.jar
 ```
 
-## Use this project in IntelliJIDEA
+Jika tidak melakukan kompilasi dengan Maven, jalankan skrip berikut untuk memulai program.
+```bash
+java --module-path "PATH\TO\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml -cp bin src.main.java.tucil.rhsolver.app.AppLauncher
 
-1. Check out the sources
-1. Open in IntelliJIDEA as a new Maven project
-1. Configure a JDK with JavaFX in "Project Structure > SDK"
-![Configuring the SDK in IntelliJIDEA](screenshot/intellijidea-project-sdk.png)
-1. Go to the file `src/main/java/be/webtechie/app/AppLauncher.java`
-1. Click on the green button "Run AppLauncher.main()"
-![Running the application in IntelliJIDEA](screenshot/intellijidea-run-app.png)
+```
 
-## Build as executable JAR with all dependencies
+Setelah program berhasil berjalan, pengguna dapat memasukkan input board dalam bentuk .txt ataupun secara manual melalui GUI yang tersedia. Ketika merasa sudah
+lengkap, pencarian dapat ditentukan algoritma pencarian dan heuristiknya, kemudian klik tombol "Solve" untuk memulai pencarian solusi. Setelah pencarian selesai, pengguna dapat melihat langkah-langkah yang diambil untuk mencapai solusi.
 
-1. Fill-in the name you want to use for your jar-file in `pom.xml` > build > finalName.
-1. Make sure the `mainClass` is correct in `pom.xml` > build > plugin > maven-assembly-plugin.
-1. Run the Maven `package` command `$ mvn package`.
-1. You can now find the jar with all dependencies packages in `/target/{YOUR_FINALNAME}.jar`.
-1. Run it with `java -jar target/{YOUR_FINALNAME}.jar`.
+Jika mengalami kesulitan dalam proses build atau tidak memenuhi requirement, pengguna dapat langsung menggunakan aplikasi yang dibarengi rilis kami.
+
+## Author
+Program ini dibuat oleh:
+- Samuel Gerrard Hamonangan Girsang 13523064
+- Lutfi Hakim Yusra 13523084
+
+
